<resources>
    <string name="app_name">Einzelbeispiel</string>
    <string name="gib_deine_matrikelnummer_ein">Gib deine Matrikelnummer ein</string>
    <string name="antwort_vom_server">Antwort vom Server</string>
    <string name="abschicken">ABSCHICKEN</string>
    <string name="matrikelnummer">Matrikelnummer</string>
    <string name="textview">TextView</string>
    <string name="berechnung">Berechnung</string>
    <string name="textviewserver">TextViewServer</string>
</resources>