<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFCFC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/eingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="21dp"
        android:text="@string/gib_deine_matrikelnummer_ein"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/feld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="76dp"
        android:text="@string/antwort_vom_server"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/berechnung" />

    <Button
        android:id="@+id/buttonAbschicken"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:onClick="run"
        android:text="@string/abschicken"
        android:textColor="@color/black"
        app:iconTint="#7E7B7B"
        app:layout_constraintBottom_toTopOf="@+id/berechnung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feld"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/feld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/matrikelnummer"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbschicken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eingabe" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="233dp"
        android:layout_height="64dp"
        android:layout_marginStart="93dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="21dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server" />

    <Button
        android:id="@+id/berechnung"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="95dp"
        android:onClick="numbersToChar"
        android:text="@string/berechnung"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAbschicken" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="133dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


</androidx.constraintlayout.widget.ConstraintLayout>